ci: relationship between schedule and sales detail